# lux_e_cor

./: CMakeLists.txt  README.md
lux_cor/: CMakeLists.txt  lux_cor.c
lux_cor/lib/: matriz.h
